feat: delete all entry, readme, refactors

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -29,6 +29,9 @@
             <div>
                 <a href="{% url 'encyclopedia:getrandomentry' %}">Random Page</a>
             </div>
+            <div>
+                <a href="{% url 'encyclopedia:deleteallentries' %}">Delete all the entries</a>
+            </div>
         </div>
 
         <div class="main col-lg-10 col-md-9">
