--- a/encyclopedia/templates/404.html
+++ b/encyclopedia/templates/404.html
@@ -2,8 +2,8 @@
 
 {% block title %}
     404: Not Found
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
     <h1>404: Not Found</h1>
-{% endblock %}
+{% endblock body %}
