--- a/encyclopedia/templates/encyclopedia/create-new-entry.html
+++ b/encyclopedia/templates/encyclopedia/create-new-entry.html
@@ -6,7 +6,7 @@
     {% else %}
         Create a new entry
     {% endif %}
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
     {% if is_edit_entry %}
@@ -16,7 +16,7 @@
         <h1>Create a new entry</h1>
         <form action="{% url 'encyclopedia:newentry' %}" method="POST">
     {% endif %}
-    
+
         {% csrf_token %}
         <div>
             <label for="entry-title">Title of entry: </label>
@@ -31,13 +31,13 @@
             <div>
                 <label for="entry-md">Content in markdown syntax: </label>
             </div>
-            
+
             <textarea name="entry-content" id="entry-md">{{ entry_content }}</textarea>
-            
+
             {% if not is_entry_content %}
                 <p style="color:red"><strong>{{ error_msg.content_error }}</strong></p>
             {% endif %}
         </div>
         <input type="submit" value="Save entry">
     </form>
-{% endblock %}
+{% endblock body %}
