--- a/encyclopedia/templates/encyclopedia/delete-all-entries.html
+++ b/encyclopedia/templates/encyclopedia/delete-all-entries.html
@@ -2,7 +2,7 @@
 
 {% block title %}
     Delete all entries
-{% endblock %}
+{% endblock title %}
 
 {% block body %}
 
@@ -33,4 +33,4 @@
             <input type="submit" value="I'm submitting this in all my consciousness">
         </div>
     </form>
-{% endblock %}
+{% endblock body %}
