--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -13,6 +13,11 @@ h1 {
     padding-top: 18px;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 textarea {
     height: 50vh;
     width: 50%;
